ships_data dict added to fn output

--- a/Instruction-inference_modular.ipynb
+++ b/Instruction-inference_modular.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\NLP 1\\venv\\Lib\\site-packages\\torchvision\\datapoints\\__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
+      "D:\\NLP 1\\venv\\Lib\\site-packages\\torchvision\\transforms\\v2\\__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
+      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n"
+     ]
+    }
+   ],
    "source": [
     "import os, math\n",
     "from slicing_inference import sahi_slicing_inference\n",
@@ -179,19 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'PIL.JpegImagePlugin.JpegImageFile'>\n",
+      "<class 'PIL.PngImagePlugin.PngImageFile'>\n",
       "\n",
       "The model takes a while to load for the first inference.\n",
       "Processing prediction\n",
-      "Performing prediction on 9 number of slices.\n",
-      "12 bboxes found in prediction\n"
+      "Performing prediction on 81 number of slices.\n",
+      "6 bboxes found in prediction\n"
      ]
     }
    ],
@@ -201,82 +212,59 @@
     "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\inference_images\"\n",
     "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\debug_images_2\\e7e24507a.jpg\"\n",
     "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\Test_images\\debug_images_3\\2_2.jpg\"\n",
-    "images_path = r\"D:\\NLP 1\\Sat_object_detection\\sentinel-concat\\2023-07-05_2023-09-25-[58.7, 23.6, 58.9, 23.8]-res5-(2500, 2500)-mostRecent-sentinel-2-l1c-maxcc0.8.jpg\"\n",
+    "images_path = r\"C:\\Users\\user2\\Desktop\\concated_tests\\x(21370_21390)-y(14030_14050)-z(15)-2023-10-24_2023-11-07.png\"\n",
     "img = Image.open(images_path)\n",
     "print(type(img))\n",
     "coord = [58.4893887115,23.6396684794,58.4961460224,23.6487324542]\n",
     "bbox_coords = [58.7, 23.6, 58.9, 23.8]\n",
     "\n",
-    "result = ship_detection(images=img, bbox_coord_wgs84=bbox_coords, annotations=[\"length\", \"coord\"], nms_iou_threshold=0.15,scale_down_factor= \"adaptive\",\n",
-    "                        adaptive_scale_down_parameters = {'a': 0.3, 'b': 1, 'threshold': 1.5}, confidence_threshold=0.9, sahi_overlap_ratio=0.33,\n",
+    "result = ship_detection(images=img, bbox_coord_wgs84=bbox_coords, annotations=[\"length\", \"coord\"], nms_iou_threshold=0.15,scale_down_factor= 1,\n",
+    "                        adaptive_scale_down_parameters = {'a': 0.3, 'b': 1, 'threshold': 1.5}, confidence_threshold=0.95, sahi_overlap_ratio=0.2,\n",
     "                        output_annotated_image=True, save_annotated_image=False, output_original_image=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n_obj': 12,\n",
-       " 'bboxes': array([[ 870.2271 , 1200.6638 ,  907.55164, 1242.7515 ],\n",
-       "        [ 307.841  ,  724.79175,  369.17755,  947.27185],\n",
-       "        [ 571.80225, 1284.5826 ,  743.38477, 1463.3835 ],\n",
-       "        [ 721.8714 ,  601.0584 ,  738.96906,  653.2425 ],\n",
-       "        [ 728.7779 , 1022.656  ,  769.42334, 1071.8563 ],\n",
-       "        [1462.383  ,  551.0234 , 1485.6593 ,  631.4449 ],\n",
-       "        [ 732.8922 ,  537.0385 ,  784.9386 ,  556.9904 ],\n",
-       "        [1414.4629 ,  558.73627, 1429.0151 ,  602.21216],\n",
-       "        [1428.4951 ,  642.0514 , 1445.8538 ,  710.02576],\n",
-       "        [1430.1279 ,  549.92633, 1443.0115 ,  605.79504],\n",
-       "        [1371.1829 ,  543.43524, 1419.4663 ,  560.76465],\n",
-       "        [1435.1926 ,  611.4829 , 1443.9192 ,  642.8814 ]], dtype=float32),\n",
-       " 'scores': array([0.99852556, 0.99786985, 0.9977182 , 0.9966708 , 0.9935874 ,\n",
-       "        0.99181503, 0.9881153 , 0.98557925, 0.983603  , 0.98101085,\n",
-       "        0.9630907 , 0.9152051 ], dtype=float32),\n",
-       " 'original_image': <PIL.Image.Image image mode=RGB size=1653x1653>,\n",
-       " 'ships_long_lat': [(58.807548627259, 23.747817016528),\n",
-       "  (58.740956960356, 23.701153272755),\n",
-       "  (58.779563642572, 23.766241155995),\n",
-       "  (58.788375103091, 23.675880272433),\n",
-       "  (58.790635279605, 23.726709752391),\n",
-       "  (58.878344977645, 23.67153468008),\n",
-       "  (58.791822795556, 23.666184448316),\n",
-       "  (58.872019239404, 23.67023281829),\n",
-       "  (58.873886804413, 23.681795350783),\n",
-       "  (58.873813636074, 23.669916602271),\n",
-       "  (58.868823301266, 23.666799755062),\n",
-       "  (58.874174943521, 23.675884105131)],\n",
-       " 'ships_lengths': [729.6,\n",
-       "  2993.2,\n",
-       "  3203.3,\n",
-       "  702.1,\n",
-       "  830.2,\n",
-       "  1082.0,\n",
-       "  695.6,\n",
-       "  584.9,\n",
-       "  914.5,\n",
-       "  751.6,\n",
-       "  639.3,\n",
-       "  422.4],\n",
-       " 'ships_bbox_dimensions': [(566.2, 460.2),\n",
-       "  (2993.2, 756.2),\n",
-       "  (2405.5, 2115.4),\n",
-       "  (702.1, 210.8),\n",
-       "  (661.9, 501.1),\n",
-       "  (1082.0, 287.0),\n",
-       "  (641.7, 268.4),\n",
-       "  (584.9, 179.4),\n",
-       "  (914.5, 214.0),\n",
-       "  (751.6, 158.8),\n",
-       "  (595.3, 233.1),\n",
-       "  (422.4, 107.6)],\n",
-       " 'annotated_image': <PIL.Image.Image image mode=RGB size=1653x1653>}"
+       "{'n_obj': 6,\n",
+       " 'bboxes': array([[2413.7888 , 1356.7067 , 2516.2046 , 1470.0531 ],\n",
+       "        [4352.295  ,  583.99524, 4481.603  ,  739.64325],\n",
+       "        [5194.0444 ,  615.     , 5372.8022 ,  743.65497],\n",
+       "        [4326.871  ,  447.67813, 4458.     ,  583.88965],\n",
+       "        [1190.7336 , 3450.2056 , 1236.509  , 3502.5723 ],\n",
+       "        [2864.5754 , 1491.0481 , 2874.8704 , 1546.1019 ]], dtype=float32),\n",
+       " 'scores': array([0.998345  , 0.99726486, 0.9961505 , 0.99441093, 0.9602332 ,\n",
+       "        0.9508305 ], dtype=float32),\n",
+       " 'original_image': <PIL.Image.Image image mode=RGB size=5376x5376>,\n",
+       " 'ships_long_lat': [(58.791703741891, 23.652581096831),\n",
+       "  (58.864321027483, 23.624621250516),\n",
+       "  (58.896555927822, 23.625272600991),\n",
+       "  (58.863409060524, 23.619188388189),\n",
+       "  (58.745149603344, 23.729329944792),\n",
+       "  (58.806760524568, 23.656494603838)],\n",
+       " 'ships_lengths': [608.7, 809.3, 861.6, 751.4, 277.5, 227.7],\n",
+       " 'ships_bbox_dimensions': [(468.9, 388.2),\n",
+       "  (643.9, 490.2),\n",
+       "  (677.6, 532.2),\n",
+       "  (563.5, 497.1),\n",
+       "  (216.6, 173.5),\n",
+       "  (227.7, 39.0)],\n",
+       " 'annotated_image': <PIL.Image.Image image mode=RGB size=5376x5376>,\n",
+       " 'ships_data': {1: {'long_lat': (58.791703741891, 23.652581096831),\n",
+       "   'length': 608.7},\n",
+       "  2: {'long_lat': (58.864321027483, 23.624621250516), 'length': 809.3},\n",
+       "  3: {'long_lat': (58.896555927822, 23.625272600991), 'length': 861.6},\n",
+       "  4: {'long_lat': (58.863409060524, 23.619188388189), 'length': 751.4},\n",
+       "  5: {'long_lat': (58.745149603344, 23.729329944792), 'length': 277.5},\n",
+       "  6: {'long_lat': (58.806760524568, 23.656494603838), 'length': 227.7}}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,6 +374,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
