--- a/Instruction-inference_modular.ipynb
+++ b/Instruction-inference_modular.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\NLP 1\\venv\\Lib\\site-packages\\torchvision\\datapoints\\__init__.py:12: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
-      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n",
-      "D:\\NLP 1\\venv\\Lib\\site-packages\\torchvision\\transforms\\v2\\__init__.py:54: UserWarning: The torchvision.datapoints and torchvision.transforms.v2 namespaces are still Beta. While we do not expect major breaking changes, some APIs may still change according to user feedback. Please submit any feedback you may have in this issue: https://github.com/pytorch/vision/issues/6753, and you can also check out https://github.com/pytorch/vision/issues/7319 to learn more about the APIs that we suspect might involve future changes. You can silence this warning by calling torchvision.disable_beta_transforms_warning().\n",
-      "  warnings.warn(_BETA_TRANSFORMS_WARNING)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, math\n",
     "from slicing_inference import sahi_slicing_inference\n",
@@ -190,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,76 +190,103 @@
       "\n",
       "The model takes a while to load for the first inference.\n",
       "Processing prediction\n",
-      "Performing prediction on 81 number of slices.\n",
-      "6 bboxes found in prediction\n"
+      "Performing prediction on 63 number of slices.\n",
+      "12 bboxes found in prediction\n"
      ]
     }
    ],
    "source": [
     "from inference_modular import ship_detection\n",
     "from PIL import Image\n",
-    "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\inference_images\"\n",
-    "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\debug_images_2\\e7e24507a.jpg\"\n",
-    "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\Test_images\\debug_images_3\\2_2.jpg\"\n",
-    "images_path = r\"C:\\Users\\user2\\Desktop\\concated_tests\\x(21370_21390)-y(14030_14050)-z(15)-2023-10-24_2023-11-07.png\"\n",
-    "img = Image.open(images_path)\n",
+    "# image_path = r\"D:\\NLP 1\\Sat_object_detection\\inference_images\"\n",
+    "# image_path = r\"D:\\NLP 1\\Sat_object_detection\\debug_images_2\\e7e24507a.jpg\"\n",
+    "# image_path = r\"D:\\NLP 1\\Sat_object_detection\\Test_images\\debug_images_3\\2_2.jpg\"\n",
+    "# image_path = r\"C:\\Users\\user2\\Desktop\\concated_tests\\x(21370_21390)-y(14030_14050)-z(15)-2023-10-24_2023-11-07.png\"\n",
+    "image_path = r\"D:\\SatteliteImages_db_concat\\x(10156_10178)-y(7600_7618)-z(14)-2023-11-15_2023-11-25.png\"\n",
+    "img = Image.open(image_path)\n",
     "print(type(img))\n",
-    "coord = [58.4893887115,23.6396684794,58.4961460224,23.6487324542]\n",
-    "bbox_coords = [58.7, 23.6, 58.9, 23.8]\n",
+    "coords = [43.15, 12.5, 43.65, 12.9]\n",
+    "# bbox_coords = [58.7, 23.6, 58.9, 23.8]\n",
     "\n",
-    "result = ship_detection(images=img, bbox_coord_wgs84=bbox_coords, annotations=[\"length\", \"coord\"], nms_iou_threshold=0.15,scale_down_factor= 1,\n",
-    "                        adaptive_scale_down_parameters = {'a': 0.3, 'b': 1, 'threshold': 1.5}, confidence_threshold=0.95, sahi_overlap_ratio=0.2,\n",
+    "result = ship_detection(images=img, bbox_coord_wgs84=coords, annotations=[\"length\", \"coord\"], nms_iou_threshold=0.15,scale_down_factor= 1,\n",
+    "                        # adaptive_scale_down_parameters = {'a': 0.3, 'b': 1, 'threshold': 1.5}, \n",
+    "                        confidence_threshold=0.9, sahi_overlap_ratio=0.1,\n",
     "                        output_annotated_image=True, save_annotated_image=False, output_original_image=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n_obj': 6,\n",
-       " 'bboxes': array([[2413.7888 , 1356.7067 , 2516.2046 , 1470.0531 ],\n",
-       "        [4352.295  ,  583.99524, 4481.603  ,  739.64325],\n",
-       "        [5194.0444 ,  615.     , 5372.8022 ,  743.65497],\n",
-       "        [4326.871  ,  447.67813, 4458.     ,  583.88965],\n",
-       "        [1190.7336 , 3450.2056 , 1236.509  , 3502.5723 ],\n",
-       "        [2864.5754 , 1491.0481 , 2874.8704 , 1546.1019 ]], dtype=float32),\n",
-       " 'scores': array([0.998345  , 0.99726486, 0.9961505 , 0.99441093, 0.9602332 ,\n",
-       "        0.9508305 ], dtype=float32),\n",
-       " 'original_image': <PIL.Image.Image image mode=RGB size=5376x5376>,\n",
-       " 'ships_long_lat': [(58.791703741891, 23.652581096831),\n",
-       "  (58.864321027483, 23.624621250516),\n",
-       "  (58.896555927822, 23.625272600991),\n",
-       "  (58.863409060524, 23.619188388189),\n",
-       "  (58.745149603344, 23.729329944792),\n",
-       "  (58.806760524568, 23.656494603838)],\n",
-       " 'ships_lengths': [608.7, 809.3, 861.6, 751.4, 277.5, 227.7],\n",
-       " 'ships_bbox_dimensions': [(468.9, 388.2),\n",
-       "  (643.9, 490.2),\n",
-       "  (677.6, 532.2),\n",
-       "  (563.5, 497.1),\n",
-       "  (216.6, 173.5),\n",
-       "  (227.7, 39.0)],\n",
-       " 'annotated_image': <PIL.Image.Image image mode=RGB size=5376x5376>,\n",
-       " 'ships_data': {1: {'long_lat': (58.791703741891, 23.652581096831),\n",
-       "   'length': 608.7},\n",
-       "  2: {'long_lat': (58.864321027483, 23.624621250516), 'length': 809.3},\n",
-       "  3: {'long_lat': (58.896555927822, 23.625272600991), 'length': 861.6},\n",
-       "  4: {'long_lat': (58.863409060524, 23.619188388189), 'length': 751.4},\n",
-       "  5: {'long_lat': (58.745149603344, 23.729329944792), 'length': 277.5},\n",
-       "  6: {'long_lat': (58.806760524568, 23.656494603838), 'length': 227.7}}}"
+       "array([4003.1875, 4006.658 , 4032.0159, 4019.739 ], dtype=float32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "result[\"bboxes\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {'long_lat': (43.491168610946, 12.830032770257),\n",
+       "  'length': 291.5,\n",
+       "  'confidence': 0.99080807},\n",
+       " 2: {'long_lat': (43.63115299059, 12.887141900314),\n",
+       "  'length': 213.1,\n",
+       "  'confidence': 0.990724},\n",
+       " 3: {'long_lat': (43.227490314193, 12.590032135813),\n",
+       "  'length': 212.0,\n",
+       "  'confidence': 0.99054366},\n",
+       " 4: {'long_lat': (43.52292928281, 12.893151132684),\n",
+       "  'length': 244.7,\n",
+       "  'confidence': 0.98785305},\n",
+       " 5: {'long_lat': (43.18310972193, 12.501099916508),\n",
+       "  'length': 238.3,\n",
+       "  'confidence': 0.97492325},\n",
+       " 6: {'long_lat': (43.45074909459, 12.812011517976),\n",
+       "  'length': 271.5,\n",
+       "  'confidence': 0.9688271},\n",
+       " 7: {'long_lat': (43.270551938596, 12.680808940687),\n",
+       "  'length': 229.1,\n",
+       "  'confidence': 0.9577218},\n",
+       " 8: {'long_lat': (43.295615183789, 12.77441125167),\n",
+       "  'length': 771.0,\n",
+       "  'confidence': 0.94356436},\n",
+       " 9: {'long_lat': (43.228563617623, 12.504695406086),\n",
+       "  'length': 220.8,\n",
+       "  'confidence': 0.93966633},\n",
+       " 10: {'long_lat': (43.337263861946, 12.799675630268),\n",
+       "  'length': 158.0,\n",
+       "  'confidence': 0.9236591},\n",
+       " 11: {'long_lat': (43.203829659586, 12.770107289364),\n",
+       "  'length': 708.6,\n",
+       "  'confidence': 0.91062754},\n",
+       " 12: {'long_lat': (43.413655538144, 12.710792581659),\n",
+       "  'length': 76.0,\n",
+       "  'confidence': 0.91030157}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[\"ships_data\"]"
    ]
   },
   {
